hopefully fixed load issue and fixed carousel overflowing

--- a/src/styles/Slider.module.css
+++ b/src/styles/Slider.module.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 98vw;
+    width: 100%;
     overflow: hidden;
     /* border: 1px red solid; */
     height: clamp(40%, 30vh + 20rem, 40vh);
